syntax = "proto3";

option csharp_namespace = "gRPC";

package tasks;

service Tasks {
  rpc SendRequest (Request) returns (Reply);
}

message Request {
  int32 requestMessage = 1;
}

message Reply {
  string replyMessage = 1;
}
